--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <li class="program_item d-flex mb2 ">
                          <a class="program_img" href="#"><img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/week4/blog-4.png?raw=true" alt=""></a>
                         <div class="program_content ">
-                            <h3 class="fz4 lh6">設計師獨享鏡框優惠</h3>
+                            <h3 class="fz4 lh6 fw-bold secondary-color-word">設計師獨享鏡框優惠</h3>
                         <div class="blog_title d-flex justify-content-between align-items">
                             <p class="fz2 lh3"> Sales for Designer </p>
                             <p class="fz1 lh1">2020/01/18</p>
@@ -94,7 +94,7 @@
                  <li class="program_item d-flex mb6">
                         <a class="program_img" href="#"> <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/week4/blog-5.png?raw=true" alt=""></a>
                     <div class="program_content ">
-                         <h3 class="fz4 lh6">抵抗夏日大作戰</h3>
+                         <h3 class="fz4 lh6 fw-bold secondary-color-word">抵抗夏日大作戰</h3>
                         <div class="blog_title d-flex justify-content-between align-items">
                         <p class="fz2 lh3"> Summer Special </p>
                         <p class="fz1 lh1"> 2019/08/07</p>
@@ -130,9 +130,9 @@
                         <li><a class="mr1" href="#">常見問題</a></li>
                     </ul>   
                     <ul class="icon d-flex align-items-center">
-                        <li><a class="ml1" href="#"><img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/4baf15e7aa2800a1e312de01435b7dbf6f654843/week3/icon-fb.svg" alt=""></a></li>
-                        <li><a class="ml1" href="#"><img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/4baf15e7aa2800a1e312de01435b7dbf6f654843/week3/icon-ig.svg" alt=""></a></li>
-                        <li><a class="ml1" href="#"><img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/4baf15e7aa2800a1e312de01435b7dbf6f654843/week3/icon-line.svg" alt=""></a></li>
+                        <li><a class="ml1" href="#"><img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/4baf15e7aa2800a1e312de01435b7dbf6f654843/week3/icon-fb.svg" alt="FB"></a></li>
+                        <li><a class="ml1" href="#"><img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/4baf15e7aa2800a1e312de01435b7dbf6f654843/week3/icon-ig.svg" alt="IG"></a></li>
+                        <li><a class="ml1" href="#"><img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/4baf15e7aa2800a1e312de01435b7dbf6f654843/week3/icon-line.svg" alt="LINE"></a></li>
                     </ul>   
                 </div>
                   <ul class="footer_contact">
